    `remove-on-upgrade` feature from dpkg 1.20.
  * dh_installdeb: Automatically rewrite `rm_conffiles` into the
    new `remove-on-upgrade` feature from dpkg when possible.
  * cmake.pm: Pass `ARGS+=--verbose` to make when running tests
    in the cmake+make variant except when "terse" is in
    DEB_BUILD_OPTIONS.  Thanks to Paul Wise for the suggestion.
    (Closes: #992623)

 -- Niels Thykier <niels@thykier.net>  Sun, 22 Aug 2021 07:13:37 +0000

debhelper (13.4.1) unstable; urgency=medium

  [ Clint Adams ]
  * autoscripts/*: Replace `which` with `command -v`.

  [ Simon McVittie ]
  * dh_installsystemd: Only merge /lib/systemd/system into /usr
    for now.  (Closes: #992554)
  * dh_systemd_enable: Ditto.

  [ Johannes Schauer Marin Rodrigues ]
  * autoscripts/postinst-init-nostart: Call invoke-rc.d when
    a non-empty DPKG_ROOT is used.  (Closes: #992556)

 -- Niels Thykier <niels@thykier.net>  Sat, 21 Aug 2021 09:01:00 +0000

debhelper (13.4+nmu1) unstable; urgency=high

  [ Sean Whitton ]
  * Non-maintainer upload.
  * Replace "use v5.28" with "use v5.24" in Dh_Lib.pm.
    The change to "use v5.28" in 13.4 broke the test to distinguish 0755
    from "0755" in the reset_perm_and_owner function, breaking builds.
    Thanks Adrian Bunk and Ansgar for help isolating the problem.

  [ Niels Thykier ]
  * debian/changelog: Correct bug number in the 13.4 entry.

 -- Sean Whitton <spwhitton@spwhitton.name>  Tue, 17 Aug 2021 13:34:02 -0700

debhelper (13.4) unstable; urgency=medium

  [ Dimitri John Ledkov ]
  * dh_dwz: run in parallel across packages.  (Closes: !47)

  [ Andrej Shadura ]
  * Dh_Buildsystems.pm: Add bmake and mkcmake as third-party
    build systems.  (Closes: !46)

  [ Guillem Jover ]
  * Dh_Buildsystems.pm: Add golang as a third-party build
    system.  (Closes: #981106)

  [ Niels Thykier ]
  * autoscripts/*: Add support for DPKG_ROOT in systemd, tmpusers,
    sysusers and init related snippets.  Based on an initial patch