@@ -10,6 +10,8 @@ debhelper (13.5) UNRELEASED; urgency=medium
     in the cmake+make variant except when "terse" is in
     DEB_BUILD_OPTIONS.  Thanks to Paul Wise for the suggestion.
     (Closes: #992623)
+  * python_support.pm: Remove obsolete dh addon.  It did nothing
+    but warning and nothing used it anymore.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 22 Aug 2021 07:13:37 +0000
 
